# f1-random-fantasy

./: .gitignore  Pipfile  Procfile  README.md  app.json  manage.py  pyproject.toml
fantasy_racing/config/: asgi.py  settings.py  urls.py  wsgi.py
fantasy_racing/fixtures/: 1_2022.yaml  1_faqs.yaml  2_teams.yaml  3_drivers.yaml
fantasy_racing/picks/: admin.py  apps.py  models.py  urls.py  views.py
fantasy_racing/picks/migrations/: 0001_initial.py  0002_alter_schedule_year.py  0002_raceresult.py  0003_alter_schedule_options.py  0003_auto_20220213_2021.py  0004_alter_schedule_options.py  0004_racepick_result.py  0005_race.py  0006_alter_race_options.py  0007_alter_race_options.py  0008_race_submit_by.py  0009_twitteruser.py  0010_alter_twitteruser_options.py  0011_twitteruser_profile_img.py  0012_faq_racepick.py
fantasy_racing/static/css/: main.css  vhs.min.css
fantasy_racing/static/fonts/: DomaineDisplayNarrowWeb-SemiboldItalic.eot
fantasy_racing/templates/: 404.html  500.html  _base.html  about.html  index.html  pick.html  picks.html  player.html  players.html  schedule.html  standings.html  statistics.html
fantasy_racing/utils/: twitter.py
scripts/: release.sh
