[tool.poetry]
name = "f1-random-fantasy-racing"
version = "0.1.0"
description = "F1 Fantasy Racing based on random driver picks"
authors = ["Dan Starner <me@danstarner.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
